<resources>
    <string name="app_name">AITUrm</string>
    <string name="welcome_back">Welcome back to Roommates</string>
    <string name="mobile_number">Mobile number</string>
    <string name="continu">Continue</string>
    <string name="dont_have_an_account">Don’t have an account? Sign up!</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="facebook_google">Facebook | Google+</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="q1">Q. What do you want us to call you?</string>
    <string name="q2">Q. What suits you best?</string>
    <string name="q3">Q. Choose your speciality</string>
    <string name="software_engineering">Software engineering</string>
    <string name="computer_science">Computer Science</string>
    <string name="big_data_analysis">Big Data Analysis</string>
    <string name="industrial_internet_things">Industrial Internet of Things</string>
    <string name="media_technologies">Media Technologies</string>
    <string name="q4">Q. What is your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="successfully_singed_up">User successfully signed up!</string>
    <string name="failed_to_sing_up">Signed up failed, try again!</string>
    <string name="format_error">Wrong format!</string>
    <string name="empty_field">Field can not be empty!</string>
    <string name="password_regex_is_wrong">Minimum eight characters, at least one uppercase letter, one lowercase letter and one number!</string>
</resources>